2000-10-03  Radek Doulik  <rodo@helixcode.com>

	* htmlengine.c (html_engine_update_event): do cursor home only
	when newPage is TRUE

	* htmltext.c (insert_text): set changes also to parent clue

	* gtkhtml.c (gtk_html_set_paragraph_style): call queue_draw to
	make cursor visible

	* htmlclueflow.c (html_clueflow_set_style): schedule update
	(relayout): new method, if min_width > max_width do
	engine_calc_size and draw

2000-10-02  Radek Doulik  <rodo@helixcode.com>

	* kill some warnings

	* htmltable.c (prev_col_do_cspan): alloc cells before doing
	column spanning

	* htmltokenizer.c (in_plain): use g_unichar_to_utf8

	* htmltable.c (scale_columns): use cell->col
	(calc_column_widths): likewise
	(calc_row_heights): use cell->row
	(calc_size): use cell->col
	(draw): use cell->col and cell->row

2000-09-29  Larry Ewing  <lewing@helixcode.com>

	* gtkhtml.h: turn GTK_HTML_USE_XIM off for the time being.

2000-09-29  Larry Ewing  <lewing@helixcode.com>

	* gtkhtml.c (style_set): 
	(realize): 
	(unrealize): 
	(size_allocate): 
	(focus_in_event): 
	(focus_out_event): add entry points for XIM handling.  This is the
	first pass integrating the XIM patches from
	garetxe@euskalnet.net

	* gtkhtml.h: define GTK_HTML_USE_XIM until the configure check is
	written
 
	* gtkhtml-im.c: file added

	* gtkhtml-im.h: file added

2000-09-29  Radek Doulik  <rodo@helixcode.com>

	* htmlengine-search.c (add_iframe_off): new helper function
	(move_to_found): updated to work with IFrames

	* gtkhtml-search.c (changed): call html_engine_search_incremental
	only for non "" texts

	* htmltable.c (html_table_end_table): don't cal lprev_col_do_cspan
	anymore

	* htmliframe.c (search): fixes

2000-09-29  Joe Shaw  <joe@helixcode.com>

	* htmltable.c (do_rspan): Remove printf.
	(html_table_add_cell): call do_cspan after setting the cell so that
	column spanning works correctly.

2000-09-29  Radek Doulik  <rodo@helixcode.com>

	* htmltable.c (inc_columns): fix col calculation
