@@ -161,7 +161,10 @@ enum _GtkHTMLCommandType {
 	GTK_HTML_COMMAND_SEARCH,
 	GTK_HTML_COMMAND_SEARCH_INCREMENTAL_FORWARD,
 	GTK_HTML_COMMAND_SEARCH_INCREMENTAL_BACKWARD,
-	GTK_HTML_COMMAND_SEARCH_REGEX
+	GTK_HTML_COMMAND_SEARCH_REGEX,
+
+	GTK_HTML_COMMAND_FOCUS_FORWARD,
+	GTK_HTML_COMMAND_FOCUS_BACKWARD
 };
 typedef enum _GtkHTMLCommandType GtkHTMLCommandType;
 
